@@ -34,7 +34,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs = "--add-opens=java.base/java.util=ALL-UNNAMED"
 }
 task buildZip(type: Zip) {
 
