@@ -24,7 +24,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs = "--add-opens=java.base/java.util=ALL-UNNAMED"
 }
 
 sonarqube {
