@@ -39,7 +39,6 @@ dependencies {
 
 test {
     useJUnitPlatform()
-    jvmArgs = "--add-opens=java.base/java.util=ALL-UNNAMED"
 }
 
 java {
